[package]
name = "selecting"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
#rust-version = "1.66"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4.0"

#[[bench]]
#name = "crit"
#path = "benches/crit.rs"
#harness = false

[features]

[dependencies]
crossbeam-channel = "0.5.6"

